feat: enhance microservices integration and coverage
Update authentication, chat, media, moderation, notification, and user services with shared contracts, internal APIs, Kafka flows, caching, WebSocket handling, and service configuration. Improve the AI service, Docker deployment files, documentation, and automated test coverage.